[gd_scene load_steps=6 format=3 uid="uid://cs0lw5ouwumj3"]

[ext_resource type="Script" path="res://src/Levels/rooms/room_1.gd" id="1_qv0e2"]
[ext_resource type="PackedScene" uid="uid://c87l4h2e277ou" path="res://src/Levels/Shared/Gate.tscn" id="2_61ble"]
[ext_resource type="TileSet" uid="uid://5gomx1uvq0tm" path="res://src/Levels/rooms/shared/buildingTileSet.tres" id="2_w2phm"]
[ext_resource type="TileSet" uid="uid://cp1nkfymf0wa5" path="res://src/Levels/rooms/shared/groundTileSet.tres" id="3_4isbu"]
[ext_resource type="PackedScene" uid="uid://c2xvn2ee41rkw" path="res://src/Actors/Enemies/CanonRex.tscn" id="5_k67tc"]

[node name="Room1" type="Node2D"]
script = ExtResource("1_qv0e2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 416.0
offset_bottom = 400.0
color = Color(0, 0.156863, 0.321569, 1)

[node name="building" type="TileMap" parent="."]
position = Vector2(0, 16)
tile_set = ExtResource("2_w2phm")
rendering_quadrant_size = 46
format = 2
layer_0/name = "building"
layer_0/tile_data = PackedInt32Array(393221, 262144, 2, 393222, 327680, 2, 393223, 327680, 2, 393224, 327680, 2, 393225, 327680, 2, 393226, 393216, 2, 327690, 393216, 1, 262154, 393216, 1, 196618, 393216, 1, 131082, 393216, 1, 131081, 327680, 1, 196617, 327680, 1, 262153, 327680, 1, 327689, 327680, 1, 327688, 327680, 1, 262152, 327680, 1, 196616, 327680, 1, 131080, 327680, 1, 131078, 327680, 1, 131079, 327680, 1, 196615, 327680, 1, 196614, 327680, 1, 262150, 327680, 1, 327686, 327680, 1, 327687, 327680, 1, 262151, 327680, 1, 327685, 262144, 1, 262149, 262144, 1, 196613, 262144, 1, 131077, 262144, 1, 65541, 262144, 0, 65542, 327680, 0, 65543, 327680, 0, 65544, 327680, 0, 65545, 327680, 0, 65546, 393216, 0)

[node name="gates" type="Node2D" parent="."]
position = Vector2(-1, 13)

[node name="Gate" parent="gates" instance=ExtResource("2_61ble")]
position = Vector2(381, 305)

[node name="ground" type="TileMap" parent="." groups=["ground"]]
tile_set = ExtResource("3_4isbu")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(917504, 1, 1, 917505, 1, 1, 917506, 1, 1, 917507, 1, 1, 917508, 1, 1, 917509, 1, 1, 917510, 1, 1, 917511, 1, 1, 917512, 1, 1, 917513, 1, 1, 917514, 1, 1, 917515, 1, 1, 851968, 1, 1, 851969, 1, 1, 851970, 1, 1, 851971, 1, 1, 851972, 1, 1, 851973, 1, 1, 851974, 1, 1, 851975, 1, 1, 851976, 1, 1, 851977, 1, 1, 851978, 1, 1, 851979, 1, 1, 720896, 1, 1, 720897, 1, 1, 720898, 1, 1, 720899, 1, 1, 720900, 1, 1, 720901, 1, 1, 720902, 1, 1, 720903, 1, 1, 720904, 1, 1, 720905, 1, 1, 720906, 1, 1, 720907, 1, 1, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 786432, 1, 1, 786433, 1, 1, 786434, 1, 1, 786435, 1, 1, 786436, 1, 1, 786437, 1, 1, 786438, 1, 1, 786439, 1, 1, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 983042, 1, 1, 983041, 1, 1, 983040, 1, 1, 983043, 1, 1, 983044, 1, 1, 983045, 1, 1, 983046, 1, 1, 983047, 1, 1, 983048, 1, 1, 983049, 1, 1, 983050, 1, 1, 983051, 1, 1, 655372, 1, 0, 720908, 1, 1, 786444, 1, 1, 851980, 1, 1, 917516, 1, 1, 983052, 1, 1, 1048577, 1, 1, 1048576, 1, 1, 1114112, 1, 1, 1179648, 1, 1, 1245184, 1, 1, 1310720, 1, 1, 1376256, 1, 1, 1441792, 1, 1, 1507328, 1, 1, 1572864, 1, 1, 1114113, 1, 1, 1179649, 1, 1, 1245185, 1, 1, 1310721, 1, 1, 1376257, 1, 1, 1441793, 1, 1, 1507329, 1, 1, 1572865, 1, 1, 1048578, 1, 1, 1114114, 1, 1, 1179650, 1, 1, 1245186, 1, 1, 1310722, 1, 1, 1376258, 1, 1, 1441794, 1, 1, 1507330, 1, 1, 1572866, 1, 1, 1048579, 1, 1, 1114115, 1, 1, 1179651, 1, 1, 1245187, 1, 1, 1310723, 1, 1, 1376259, 1, 1, 1441795, 1, 1, 1507331, 1, 1, 1572867, 1, 1, 1048580, 1, 1, 1114116, 1, 1, 1179652, 1, 1, 1245188, 1, 1, 1310724, 1, 1, 1376260, 1, 1, 1441796, 1, 1, 1507332, 1, 1, 1572868, 1, 1, 1048581, 1, 1, 1114117, 1, 1, 1179653, 1, 1, 1245189, 1, 1, 1310725, 1, 1, 1376261, 1, 1, 1441797, 1, 1, 1507333, 1, 1, 1572869, 1, 1, 1048582, 1, 1, 1114118, 1, 1, 1179654, 1, 1, 1245190, 1, 1, 1310726, 1, 1, 1376262, 1, 1, 1441798, 1, 1, 1507334, 1, 1, 1572870, 1, 1, 1048583, 1, 1, 1114119, 1, 1, 1179655, 1, 1, 1245191, 1, 1, 1310727, 1, 1, 1376263, 1, 1, 1441799, 1, 1, 1507335, 1, 1, 1572871, 1, 1, 1048584, 1, 1, 1114120, 1, 1, 1179656, 1, 1, 1245192, 1, 1, 1310728, 1, 1, 1376264, 1, 1, 1441800, 1, 1, 1507336, 1, 1, 1572872, 1, 1, 1048585, 1, 1, 1114121, 1, 1, 1179657, 1, 1, 1245193, 1, 1, 1310729, 1, 1, 1376265, 1, 1, 1441801, 1, 1, 1507337, 1, 1, 1572873, 1, 1, 1048586, 1, 1, 1114122, 1, 1, 1179658, 1, 1, 1245194, 1, 1, 1310730, 1, 1, 1376266, 1, 1, 1441802, 1, 1, 1507338, 1, 1, 1572874, 1, 1, 1048587, 1, 1, 1114123, 1, 1, 1179659, 1, 1, 1245195, 1, 1, 1310731, 1, 1, 1376267, 1, 1, 1441803, 1, 1, 1507339, 1, 1, 1572875, 1, 1, 1048588, 1, 1, 1114124, 1, 1, 1179660, 1, 1, 1245196, 1, 1, 1310732, 1, 1, 1376268, 1, 1, 1441804, 1, 1, 1507340, 1, 1, 1572876, 1, 1, 1638400, 1, 1, 1703936, 1, 1, 1769472, 1, 1, 1835008, 1, 1, 1900544, 1, 1, 1966080, 1, 1, 2031616, 1, 1, 1638401, 1, 1, 1703937, 1, 1, 1769473, 1, 1, 1835009, 1, 1, 1900545, 1, 1, 1966081, 1, 1, 2031617, 1, 1, 1638402, 1, 1, 1703938, 1, 1, 1769474, 1, 1, 1835010, 1, 1, 1900546, 1, 1, 1966082, 1, 1, 2031618, 1, 1, 1638403, 1, 1, 1703939, 1, 1, 1769475, 1, 1, 1835011, 1, 1, 1900547, 1, 1, 1966083, 1, 1, 2031619, 1, 1, 1638404, 1, 1, 1703940, 1, 1, 1769476, 1, 1, 1835012, 1, 1, 1900548, 1, 1, 1966084, 1, 1, 2031620, 1, 1, 1638405, 1, 1, 1703941, 1, 1, 1769477, 1, 1, 1835013, 1, 1, 1900549, 1, 1, 1966085, 1, 1, 2031621, 1, 1, 1638406, 1, 1, 1703942, 1, 1, 1769478, 1, 1, 1835014, 1, 1, 1900550, 1, 1, 1966086, 1, 1, 2031622, 1, 1, 1638407, 1, 1, 1703943, 1, 1, 1769479, 1, 1, 1835015, 1, 1, 1900551, 1, 1, 1966087, 1, 1, 2031623, 1, 1, 1638408, 1, 1, 1703944, 1, 1, 1769480, 1, 1, 1835016, 1, 1, 1900552, 1, 1, 1966088, 1, 1, 2031624, 1, 1, 1638409, 1, 1, 1703945, 1, 1, 1769481, 1, 1, 1835017, 1, 1, 1900553, 1, 1, 1966089, 1, 1, 2031625, 1, 1, 1638410, 1, 1, 1703946, 1, 1, 1769482, 1, 1, 1835018, 1, 1, 1900554, 1, 1, 1966090, 1, 1, 2031626, 1, 1, 1638411, 1, 1, 1703947, 1, 1, 1769483, 1, 1, 1835019, 1, 1, 1900555, 1, 1, 1966091, 1, 1, 2031627, 1, 1, 2097152, 1, 1, 2162688, 1, 1, 2228224, 1, 1, 2293760, 1, 1, 2359296, 1, 1, 2097153, 1, 1, 2162689, 1, 1, 2228225, 1, 1, 2293761, 1, 1, 2359297, 1, 1, 2097154, 1, 1, 2162690, 1, 1, 2228226, 1, 1, 2293762, 1, 1, 2359298, 1, 1, 2097155, 1, 1, 2162691, 1, 1, 2228227, 1, 1, 2293763, 1, 1, 2359299, 1, 1, 2097156, 1, 1, 2162692, 1, 1, 2228228, 1, 1, 2293764, 1, 1, 2359300, 1, 1, 2097157, 1, 1, 2162693, 1, 1, 2228229, 1, 1, 2293765, 1, 1, 2359301, 1, 1, 2097158, 1, 1, 2162694, 1, 1, 2228230, 1, 1, 2293766, 1, 1, 2359302, 1, 1, 2097159, 1, 1, 2162695, 1, 1, 2228231, 1, 1, 2293767, 1, 1, 2359303, 1, 1, 2097160, 1, 1, 2162696, 1, 1, 2228232, 1, 1, 2293768, 1, 1, 2359304, 1, 1, 2097161, 1, 1, 2162697, 1, 1, 2228233, 1, 1, 2293769, 1, 1, 2359305, 1, 1, 2097162, 1, 1, 2162698, 1, 1, 2228234, 1, 1, 2293770, 1, 1, 2359306, 1, 1, 2097163, 1, 1, 2162699, 1, 1, 2228235, 1, 1, 2293771, 1, 1, 2359307, 1, 1, 1638412, 1, 1, 1703948, 1, 1, 1769484, 1, 1, 1835020, 1, 1, 1900556, 1, 1, 1966092, 1, 1, 2031628, 1, 1, 2097164, 1, 1, 2162700, 1, 1, 2228236, 1, 1, 2293772, 1, 1, 2359308, 1, 1)

[node name="CanonRex" parent="." instance=ExtResource("5_k67tc")]
position = Vector2(184, 66)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(206, 171.5)
scale = Vector2(20.6, 16.35)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
